# singleton_pitfall

./: CMakeLists.txt  README.md  main.cpp
badguy/: badguy.cpp
logger/: logger.cpp  logger.h
sth/: sth.cpp  sth.h
